--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Login</title>
-        
-    </head>
-    
-    <body>
-        <div class="container">
-        	<h2>Login</h2>
-            <p>Please fill in your User Id:</p>
-            <form action="" method="post">
-            	<label>Enter PAN No.</label>
-            	<input type="text" name="text" length="" class="form-control" required />
-            	<span class="" style="" >
-					<label class=""> Type of loan: 
-						<span class="asterisk">*</span>
-					</label>
-					<select id="typeOfLoan" class="" name="typeOfLoan" required="required">
-						<option value="">Select loan type</option>
-							<option value="vehicleLoan">Vehicle Loan</option>
-							<option value="propertyLoan">Property Loan</option>
-							<option value="jewelleryLoan">Jewellery Loan</option>
-					</select>
-					<span class="focus-border"></span>
-				</span> 
-            </form>
-        </div>   
-    </body>
-</html>
+<head>
+    <meta charset="UTF-8">
+    <title>Login</title>
+    <script type="text/javascript" src="login.js"></script>
+</head>
 
+<body>
+
+<div class="container">
+    <h2>Login</h2>
+    <p>Please fill in your User Id:</p>
+    <form action="/verifyUser" method="post">
+        <label>Enter PAN No.</label>
+        <input type="text" name="panCard" id="panCard" onfocusout="checkUserExistOrNot()" required />	
+        <label class=""><b>Type of Loan:</b></label>
+        <select id="typeOfLoan" class="" name="typeOfLoan" required>
+            <option value="">Select loan type</option>
+            <option id="1" value="vehicleLoan">Vehicle Loan</option>
+            <option id="2" value="propertyLoan">Property Loan</option>
+            <option id="3" value="jewelleryLoan">Jewellery Loan</option>
+        </select>
+        <br>
+        <br>
+        <button type="submit">Apply</button>
+    </form>
+</div>
+</body>
+</html>
